# LABs

./: .gitignore  README.md  main.py  main_delta.py  main_steps.py  memory_usage.py  memory_usage_delta.py  tables.py
Lab1/: dihotomia.py  fib_search.py  golden_sec.py  pauell.py  polinom_aprox.py
Lab2/: main.py  memory_usage.py  pyproject.toml  tables.py
Lab2/methods/: wrappers_memory.py
Lab2/research_doc/: NursultanBaktybekovSRSP.tex
Lab2/research_doc/flowcharts/: first_task.drawio  pyramid.drawio  second_task.drawio
Lab2/research_doc/tables/: batcher_table.tex  pyramid_table.tex
Lab2/two_tasks/: second.py
flowcharts/: barcher.drawio  priority.drawio
methods/: batcher.py  priority_func.py  priority_queue.py  pyramid.py  wrappers_speed.py
research_doc/: NursultanBaktybekovSRSP.tex  Preambule_course_work.tex
research_doc/flowcharts/: barcher.drawio  first_task.drawio  priority.drawio  pyramid.drawio  second_task.drawio
research_doc/tables/: priority_table.tex
research_doc/title/: title.tex
two_tasks/: first.py  second.py
