[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["hydroxygenium <orenvady@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
